--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp"
-    android:paddingTop="56dp"
-    android:background="#ECEFF1"
-    android:id="@+id/entire_screen">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="72dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="24dp"
         android:src="@drawable/logo"
         android:contentDescription="@null"
         android:id="@+id/image_view"
         />
 
+
     <ViewFlipper
         android:id="@+id/yelp_options_flipper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:interpolator="@android:anim/decelerate_interpolator"
-        android:flipInterval="5000"
-        android:layoutDirection="ltr"
         android:layout_below='@id/image_view'
-        >
+        android:flipInterval="5000"
+        android:interpolator="@android:anim/decelerate_interpolator"
+        android:layoutDirection="ltr"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="72dp"
+        tools:ignore="MissingConstraints">
 
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp">
@@ -42,49 +38,50 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/min_stars"
-                android:textColorHint="#757575"
-                />
+                android:textColorHint="#757575" />
+
             <org.angmarch.views.NiceSpinner
                 android:id="@+id/stars_spinner"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="150dp"/>
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/find_food"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/find_food_button"
                 android:padding="12dp"
-                android:text="@string/find_food_button"
-                android:textAllCaps="false"
                 android:shadowColor="#c4fcdd"
-                android:background="@drawable/find_food_button" />
-        </LinearLayout>
+                android:text="@string/find_food_button"
+                android:textAllCaps="false" />
+        </android.support.design.widget.TextInputLayout>
 
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/test"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            >
+            android:layout_marginTop="8dp">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/distance"
                 android:textColorHint="#757575" />
+
             <org.angmarch.views.NiceSpinner
                 android:id="@+id/distance_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#607D8B"/>
-        </LinearLayout>
+                android:layout_gravity="center" />
+        </android.support.design.widget.TextInputLayout>
 
-        <LinearLayout
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/test2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp">
 
@@ -92,35 +89,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/max_price"
-                android:textColorHint="#757575"/>
+                android:textColorHint="#757575" />
+
             <org.angmarch.views.NiceSpinner
                 android:id="@+id/price_spinner"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="150dp"/>
+                android:layout_height="wrap_content" />
+
             <Button
                 android:id="@+id/find_food_default"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:layout_marginTop="24dp"
+                android:background="@drawable/find_food_button"
                 android:padding="12dp"
-                android:text="@string/search_with_defaults"
-                android:textAllCaps="false"
                 android:shadowColor="#c4fcdd"
-                android:background="@drawable/find_food_button" />
-        </LinearLayout>
+                android:text="@string/search_with_defaults"
+                android:textAllCaps="false" />
+        </android.support.design.widget.TextInputLayout>
+
     </ViewFlipper>
 
     <com.billyji.datenight.ui.ViewIndicator.CirclePageIndicator
         android:id="@+id/circlePageIndicator"
+        app:fillColor="#FF888888"
+        app:radius="5dp"
+        app:strokeWidth="1dp"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="244dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/yelp_options_flipper"
-        android:gravity="bottom"
-        app:fillColor="#FF888888"
-        app:radius="5dp"
-        app:strokeWidth="1dp" />
-</RelativeLayout>
+        android:padding="10dp"
+        tools:layout_editor_absoluteY="267dp"
+        tools:ignore="MissingConstraints" />
+</android.support.constraint.ConstraintLayout>
