--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="selectedDot">#03A9F4</color>
+    <color name="stars_color">#FB8C00</color>
+    <color name="dollar_sign_color">#1B5E20</color>
 </resources>
