--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,22 @@
     android:background="#ECEFF1"
     android:id="@+id/entire_screen">
 
-    <ImageView
+    <xyz.schwaab.avvylib.AvatarView
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
+        android:layout_height="128dp"
+        app:avvy_border_highlight_color="#ff5900"
+        app:avvy_border_highlight_color_end="#bf15bc"
+        app:avvy_border_thickness="4dp"
+        app:avvy_border_thickness_highlight="3dp"
+        app:avvy_distance_to_border="5dp"
+        app:avvy_highlighted="true"
+        app:avvy_loading_arches="5"
+        app:avvy_loading_arches_degree_area="90"
+        android:layout_gravity="center"
         android:layout_marginBottom="50dp"
         android:src="@drawable/logo"
         android:contentDescription="@null"
-        android:id="@+id/image_view"
+        android:id="@+id/logo_image_view"
         />
 
     <ViewFlipper
@@ -28,7 +36,7 @@
         android:interpolator="@android:anim/decelerate_interpolator"
         android:flipInterval="5000"
         android:layoutDirection="ltr"
-        android:layout_below='@id/image_view'
+        android:layout_below="@id/logo_image_view"
         >
 
         <LinearLayout
@@ -48,7 +56,7 @@
                 android:id="@+id/stars_spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="150dp"/>
+                android:layout_marginBottom="150dp" />
             <Button
                 android:id="@+id/find_food"
                 android:layout_width="fill_parent"
