--- a/app/src/main/res/layout/activity_food_choices.xml
+++ b/app/src/main/res/layout/activity_food_choices.xml
@@ -1,7 +1,23 @@
-<com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
-    android:id="@+id/all_food_list"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp" />
+    android:layout_height="match_parent">
+
+    <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
+        android:id="@+id/all_food_list"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/action_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="10dp"
+        android:backgroundTint="@color/vpi__bright_foreground_disabled_holo_light"
+        app:srcCompat="@drawable/dice" />
+</android.support.design.widget.CoordinatorLayout>
+
